hoàn thành sửa cấu trúc database mongoDB bên service